2014-11-17 Stefan Bidigaray <stefanbidi@gmail.com>
	* Headers/CoreFoundation/GSCharUtilities.h,
	* Headers/CoreFoundation/GSCharacter.h: Rename file.
	* Headers/CoreFoundation/GSUnicode.h: Add API for Unicode string.
	Not yet part of build and install.
	* Source/GSUnicode.c: Update part of the code to use new character
	utilities.
	* Source/GSUnicode.h: remove redundant functionality. This file
	will eventually be completely superceded by GSCharacter.h and
	GSUnicode.h.

2014-11-13 Stefan Bidigaray <stefanbidi@gmail.com>
	* configure,
	* configure.ac: Use '--without-' to compile without a specific library.
	* Source/config.h.in: Define sizeof double and long double.

2014-11-12 Stefan Bidigaray <stefanbidi@gmail.com>
	* Headers/CoreFoundation/GSCharUtilities.c: Add new public character
	utilities API.

2014-10-17 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/GSUnicode.c: Rework some of the string formatting code.

2014-10-07 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/GSUnicode.c: Initial double formatting implementation.
	Only supports inf and nan for now.
	* Tests/CFString/format_errors.m: Test for common errors.
	* Tests/CFString/format_float.m: Test for inf and nan.

2014-09-26 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/CFRuntime.c: Handle NULL pointer correctly.
	* Source/CFString.c: Switch to using GSUnicodeFormatWithArguments.
	* Source/CFStringFormat.c: Deleted.  New formatting facilities
	available.
	* Source/GSUnicode.c: Fixed many bugs found by test suite.
	* Tests/CFString/format.m: Deleted.
	* Tests/CFString/format_int.m: Integer only tests.
	* Tests/CFString/format_misc.m: Miscellaneous tests, including string,
	character and pointer.

2014-09-19 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/CFSocket.c: Fix build without libdispatch.
	* Headers/CoreFoundation/CFBase.h.in,
	  configure,
	  configure.ac: Use correct sign for data types.

2014-05-06 Lubos Dolezel <lubos@dolezel.info>
	* Source/CFRunLoop.c,